Fix add'l scroll issue on iOS

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap");
 
 body {
-  background-image: url(./still.jpg);
-  background-size: cover;
-  background-position: 75% center;
-
   color: rgba(255, 255, 255, 0.7);
   font-family: "Source Code Pro", sans-serif;
 
@@ -84,15 +80,14 @@ html {
 }
 
 .main {
+  background-image: url(./still.jpg);
+  background-size: cover;
+  background-position: 75% center;
+  background-repeat: no-repeat;
+
   display: flex;
   flex-direction: column;
-  height: 100%;
-}
-
-@media only screen and (min-width: 600px) {
-  .main {
-    height: 100%;
-  }
+  height: 100vh;
 }
 
 .scrollContainer {
